...
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/spnIon" />

    <TextView
        android:id="@+id/tvAcid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Acid"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/spnAlcohol" />

    <Spinner
        android:id="@+id/spnIon"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:entries="@array/ion_array"
...
        app:layout_constraintTop_toBottomOf="@+id/tvAlcohol"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Spinner
        android:id="@+id/spnAcid"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:entries="@array/ratios_array"
        android:layout_marginLeft="25dp"
        android:background="@drawable/border"
        app:layout_constraintLeft_toLeftOf="parent"
...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/WE"
        android:text="@string/Back"
        android:textSize="24sp"
...
        android:textStyle="bold"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/WE"
        android:text="@string/Submit"
        android:textSize="24sp"
...
